Se agrega footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,9 @@
                 Pero estadisticamente no lo eres... por ahora.
             </p>
         </div>
+        <div class="footer">
+            Hecho con amor con Platzi &lt;3
+        </div>
     </div>
 
 </body>
